# aim

./: CMakeLists.txt
include/: aim_board.h
src/: aim.cpp  aim_board.cpp
